--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
     <title>Config Generator</title>
 </head>
 
 <body>
     <h1 class="display-1 text-center">config.json generator</h1>
+
+
+    <form>
+        <label for="client_id">Client ID:</label>
+        <input type="text" id="client_id" name="client_id" required="required">
+        <br>
+        <label for="client_secret_key">Client Secret Key:</label>
+        <input type="text" id="client_secret_key" name="client_secret_key" required="required">
+        <br>
+        <label for="user_agent">User Agent:</label>
+        <input type="text" id="user_agent" name="user_agent" required="required">
+    </form>
+
+
     <script src="index.js"></script>
 </body>
 
