added form fields for all json data that is not an array

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
         <br>
         <label for="user_agent">User Agent:</label>
         <input type="text" id="user_agent" name="user_agent" required="required">
+        <br>
+        <label for="username">Reddit Username:</label>
+        <input type="text" id="username" name="username" required="required">
+        <br>
+        <label for="password">Reddit Password:</label>
+        <input type="password" id="password" name="password" required="required">
+        <br>
+        <label for="rss">RSS URL:</label>
+        <input type="text" id="rss" name="rss" required="required">
+        <br>
+        <label for="image_filename">Image filename (Optional):</label>
+        <input type="text" id="image_filename" name="image_filename">
+        <br>
+        <label for="image_caption">Image caption (Optional):</label>
+        <input type="text" id="image_caption" name="image_caption">
     </form>
 
 
