--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="display-1 text-center">config.json generator</h1>
 
 
-    <form>
+    <form id="static_form">
         <label for="client_id">Client ID:</label>
         <input type="text" id="client_id" name="client_id" required="required">
         <br>
@@ -39,6 +39,8 @@
         <br>
         <label for="image_caption">Image caption (Optional):</label>
         <input type="text" id="image_caption" name="image_caption">
+        <br>
+        <input type="submit" value="Generate config.json">
     </form>
 
 
